// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset exclude all 1`] = `Array []`;

exports[`exclude asset exclude some 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.82 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry object 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry regexp 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry string 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude no exclude 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.82 kb. It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of async assets is 0.13 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize not match - global 1`] = `Array []`;

exports[`maxAsyncSize not match - override global 1`] = `Array []`;

exports[`maxAsyncSize override global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of async assets is 0.13 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 142,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 12811,
            "rule": Object {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 12953,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of async assets is 0.14 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of initial assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of initial assets is 8.68 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize not match - global 1`] = `Array []`;

exports[`maxInitialSize not match - override global 1`] = `Array []`;

exports[`maxInitialSize override global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of initial assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of initial assets is 8.68 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 3526,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 3526,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of initial assets is 3.44 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 142,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 12811,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 12953,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of initial assets is 12.51 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.82 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize not match - global 1`] = `Array []`;

exports[`maxSize not match - override global 1`] = `Array []`;

exports[`maxSize override global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 8.82 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 3526,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 3526,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size of assets is 3.44 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncSize": 142,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 12811,
            "rule": Object {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 12953,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size of assets is 12.65 kb. It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
